[package]
name = "web_gestor_claves"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cocoon = "0.4"
# rpassword lo necesitamos para pedir la clave al arrancar el servidor
rpassword = "7.0" 

# --- EL STACK WEB ---
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }